--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;1,100;1,200;1,400&display=swap');
 
+        @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;700&display=swap');
+
+
         .k2d-thin {
             font-family: "K2D", sans-serif;
             font-weight: 100;
@@ -60,11 +63,25 @@
             font-style: italic;
         }
 
+        body,
+        .bai-jamjuree-regular {
+            font-family: "Bai Jamjuree", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+        }
+
+        .bai-jamjuree-bold {
+            font-family: "Bai Jamjuree", sans-serif;
+            font-weight: 700;
+            font-style: normal;
+        }
+
         :root {
             --primary-blue: #082942;
             --secondary-blue: #0065B8;
             --primary-green: #37C44D;
             --primary-green-hover: #2EAC42;
+            --light-green: #F3FBF4;
             --primary-margin: 2.188rem;
             --second-margin: 1.125rem;
         }
@@ -128,7 +145,8 @@
 
         #title h1,
         #title h2,
-        #title div {
+        #title div,
+        #keys h2 {
             max-width: 56.25rem;
             text-align: center;
             margin: auto;
@@ -158,6 +176,45 @@
             background-color: var(--primary-blue);
             color: #FFF;
         }
+
+        #keyLearn ul {
+            max-width: 49.25rem;
+            margin: auto;
+            /* TODO à faire une fois pour toute pour pour "section *" ... ????? */
+        }
+
+        #keyLearn ul li {
+            list-style: url('assets/bullet.svg');
+            margin-top: 0.938rem;
+            font-size: 1.25rem;
+        }
+
+        #keyLearn ul li:first-child {
+            margin-top: 0;
+        }
+
+        #keys {
+            background-color: var(--light-green);
+        }
+
+        #keys h2 {
+            color: var(--primary-blue);
+            font-size: 3rem;
+        }
+
+        #keys ul {
+            display: flex;
+        }
+
+        #keys ul li {
+            list-style: none;
+        }
+
+        #keys .h3 {
+            font-size: 30px;
+            /* FIXME */
+            color: var(--primary-blue);
+        }
     </style>
 </head>
 
@@ -180,6 +237,27 @@
                 <li>Apprenez les impacts du numériques sur l'environnement</li>
                 <li>Concevez des applications plus sobre avec l'éco-conception de service numérique</li>
                 <li>Mesurez votre performance environnementale et communiquez la.</li>
+            </ul>
+        </section>
+        <section id="keys">
+            <h2 class="k2d-semibold">Points clés du numériques</h2>
+            <ul>
+                <li>
+                    <img src="assets/co2.svg" alt="co2 équivalent" />
+                    <span class="h3 k2d-medium">Empreinte Carbone</span>
+                </li>
+                <li>
+                    <img src="assets/handshake.svg" alt="main qui se sert" />
+                    <span class="h3 k2d-medium">COP 21</span>
+                </li>
+                <li>
+                    <img src="assets/ges.svg" alt="planète avec un nuage et un tête de mort" />
+                    <span class="h3 k2d-medium">Gaz à Effet de Serre</span>
+                </li>
+                <li>
+                    <img src="assets/flashlight.svg" alt="éclaire" />
+                    <span class="h3 k2d-medium">Electricité</span>
+                </li>
             </ul>
         </section>
         <p>1er paragraphe</p>
