--- a/index.html
+++ b/index.html
@@ -333,12 +333,17 @@
             display: none;
         }
 
+        #testimonials h2 {
+            margin-bottom: calc(var(--primary-margin) + 3.75rem);
+        }
+
         #testimonials article {
             display: flex;
             margin-left: 143px;
             margin-right: 143px;
 
             color: var(--primary-blue);
+            justify-content: space-around;
         }
 
         #testimonials img {
@@ -670,7 +675,7 @@
             -->
             <article>
                 <div>
-                    <img src="assets/clients/Nicolas PEDEGERT.jpeg" alt="Nicolas PEDEGERT">
+                    <img src="assets/clients/Nicolas_PEDEGERT.webp" alt="Nicolas PEDEGERT">
                     <h3 class="k2d-medium">Nicolas PEDEGERT</h3>
                     <h4 class="bai-jamjuree-italic">Ingénieur d'affaire chez INOCO</h4>
                     <p>Corentin est intervenu lors de notre Meet Up dédié au Green IT, afin de nous présenter quels sont
@@ -679,7 +684,18 @@
 
                         Présentation dynamique, et très intéressante, merci beaucoup Corentin ;)</p>
                 </div>
+                <div>
+                    <img src="assets/clients/Amel SALHI.webp" alt="Nicolas PEDEGERT">
+                    <h3 class="k2d-medium">Amel SALHI</h3>
+                    <h4 class="bai-jamjuree-italic">Dirigeante associée - Marketing et Communication chez SIGAL</h4>
+                    <p>Corentin nous a accompagné pendant 1 an dans le cadre d'un nouveau projet que l'on souhaitait le
+                        plus green possible.
+                        Il a été de bons conseils à chaque étape du développement et a su nous proposer des alternatives
+                        durables sans dégrader l'expérience client.
+                        Merci Corentin !</p>
+                </div>
             </article>
+
 
         </section>
 
